--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" id="first-name" type="text" placeholder="Your First Name *" required data-validation-required-message="Please enter your first name.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control" id="last-name" type="text" placeholder="Your Last Name *" required data-validation-required-message="Please enter your last name.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
                     <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
