--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="people and friends">people and friends</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -63,17 +63,17 @@
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To My Website!</div>
           <div class="intro-heading text-uppercase">Harrison Horler</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#people and friends">Tell Me More</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
-    <section id="services">
+    <!-- People And Friends -->
+    <section id="people and friends">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
+            <h2 class="section-heading text-uppercase">people and friends</h2>
             <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
@@ -81,25 +81,25 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="people and friends-heading">Aaron Horler</h4>
+            <p class="text-muted">I am a postgraduate Master of Information Technology student at RMIT University.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="people and friends-heading">Stephen Horler</h4>
+            <p class="text-muted">I am a real estate agent at Stephen Horler Fixed Fee.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
+            <h4 class="people and friends-heading">Aidan Byrne</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
         </div>
@@ -269,13 +269,13 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.youtube.com/channel/UCncFhamKJ6z0zYFulU_kYdg">
-                  <i class="fa fa-youtube-play"></i>
+                <a href="https://github.com/gamemodeh">
+                  <i class="fa fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/gamemodeh">
-                  <i class="fa fa-github"></i>
+                <a href="https://www.reddit.com/user/GamemodeH/">
+                  <i class="fa fa-reddit"></i>
                 </a>
               </li>
             </ul>
