People and freinds

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <i class="fa fa-file fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="people and -heading">Aidan Byrne</h4>
-            <p class="text-muted">I made my own website, check it out.</p>
+            <p class="text-muted">I made my own awesome website last year, check it out.</p>
           </div>
         </div>
       </div>
