Various minor improvements
Including CSS and JavaScript minification.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Welcome To My Website!">
     <meta name="author" content="Harrison Horler">
+    <meta name="url" content="https://harrisonhorler.com">
+    <link rel="canonical" href="https://harrisonhorler.com">
+
+    <!-- Privacy -->
+    <meta name="referrer" content="no-referrer">
+    <meta http-equiv="x-dns-prefetch-control" content="off">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="date=no">
+    <meta name="format-detection" content="address=no">
+    <meta name="format-detection" content="email=no">
 
     <title>Harrisons Website</title>
 
@@ -21,13 +31,13 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/agency.min.css" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#01202f">
 
   </head>
 
@@ -44,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#people-and-friends">people and friends</a>
+              <a class="nav-link js-scroll-trigger" href="#people-and-friends">People and Friends</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Games</a>
@@ -63,7 +73,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To My Website!</div>
           <div class="intro-heading text-uppercase">Harrison Horler</div>
-          <button id="next-image" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">next image</button>
+          <button id="next-image" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">Next Image</button>
         </div>
       </div>
     </header>
@@ -73,7 +83,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">people and friends</h2>
+            <h2 class="section-heading text-uppercase">People and Friends</h2>
             <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
@@ -241,7 +251,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <p>&copy; Harrison Horler</p>
+                <p>&copy; Harrison Horler 2018</p>
               </li>
             </ul>
           </div>
@@ -361,12 +371,12 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="js/jqBootstrapValidation.js" defer></script>
+    <script src="js/contact_me.min.js" defer></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/agency.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/agency.min.js" defer></script>
+    <script src="js/custom.min.js" defer></script>
 
 
   </body>
