--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#family-and-friends">Family and friends</a>
+           </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#people-and-friends">people and friends</a>
             </li>
             <li class="nav-item">
@@ -138,7 +141,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://scratch.mit.edu/users/Ironman23579/">
                     <i class="fa fa-laptop"></i>
                   </a>
                 </li>
@@ -149,12 +152,6 @@
                 </li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted"></p>
-          </div>
         </div>
       </div>
     </section>
@@ -208,7 +205,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Game3</h4>
-              <p class="text-muted">Identity</p>
+              <p class="text-muted"></p>
             </div>
           </div>
         </div>
