--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Stephen Horler</h4>
-              <p class="text-muted">I am a real estate agent at Stephen Horler Fixed Fee.</p>
+              <h4>Chloe Horler</h4>
+              <p class="text-muted">I am a song 20 year old song writer writing songs in my spare time, Check out my songs.</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://twitter.com/chloehorler?lang=en">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
+                  <a href="https://www.youtube.com/user/chorler">
+                    <i class="fa fa-youtube"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
+                  <a href="https://www.triplejunearthed.com/artist/chlo%C3%A9-horler">
+                    <i class="fa fa-music"></i>
                   </a>
                 </li>
               </ul>
@@ -213,7 +213,7 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Game3</h4>
+              <h4>Tic Tac Toe</h4>
               <p class="text-muted"></p>
             </div>
           </div>
@@ -221,42 +221,21 @@
       </div>
     </section>
 
-    <!-- People And Friends -->
-    <section id="people-and-friends">
-      <div class="container">
-        <div class="row">
+    <!-- Australia Map -->
+    <section id="map">
+      <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">people and friends</h2>
+            <h2 class="section-heading text-uppercase">Australia Map</h2>
             <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="people and friends-heading">Aaron Horler</h4>
-            <p class="text-muted">I am a postgraduate Master of Information Technology student at RMIT University.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="people and friends-heading">Stephen Horler</h4>
-            <p class="text-muted">I am a real estate agent at Stephen Horler Fixed Fee.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-file fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="people and -heading">Aidan Byrne</h4>
-            <p class="text-muted">I made my own awesome website last year, check it out.</p>
-          </div>
-        </div>
-      </div>
+        <iframe 
+          width="100%"
+          height="600"
+          frameborder="0"
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAAW4CYnvQIbL-HyMflAMSYDupbQHHbH18
+            &q=Australia">
+        </iframe>
     </section>
 
     <!-- Contact -->
