--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Games</a>
 	         </li>
+           <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#map">Australia Map</a>
+           </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -80,7 +83,7 @@
     </header>
 
     <!-- Family And Friends -->
-    <section class="bg-light" id="team">
+    <section class="bg-light" id="family-and-friends">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
