World Map & Family And Friends
Added Google Maps and family and frineds

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+              <a href="https://aaronhorler.com">
+                <img class="mx-auto rounded-circle pop-out" src="img/team/1.jpg" alt="">
+              </a>
               <h4>Aaron Horler</h4>
               <p class="text-muted">I am a postgraduate Master of Information Technology student at RMIT University.</p>
               <ul class="list-inline social-buttons">
@@ -118,7 +120,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+              <a href="https://chloehorler.com">
+                <img class="mx-auto rounded-circle pop-out" src="img/team/2.jpg" alt="">
+              </a>
               <h4>Chloe Horler</h4>
               <p class="text-muted">I am a song 20 year old song writer writing songs in my spare time, Check out my songs.</p>
               <ul class="list-inline social-buttons">
@@ -142,7 +146,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+              <a href="http://aidanbyrne.design">
+                <img class="mx-auto rounded-circle pop-out" src="img/team/3.jpg" alt="">
+              </a>
               <h4>Aidan Byrne</h4>
               <p class="text-muted">I made my own awesome website last year, check it out.</p>
               <ul class="list-inline social-buttons">
